--- a/Module 2.html
+++ b/Module 2.html
@@ -112,7 +112,7 @@ A new Landing page has to be created for each option
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="Reflection.html" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
