--- a/About.html
+++ b/About.html
@@ -7,7 +7,7 @@ A new Landing page has to be created for each option
 -->
 <html>
 	<head>
-		<title>Jane Doe</title>
+		<title>Sherelle Garwood</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -54,7 +54,7 @@ A new Landing page has to be created for each option
 							</header>
 							<div class="content">
 								<p>About me<br />
-								(Should be good)</p>
+								My name is [Your Name], and I am excited to share with you my journey and experiences throughout my Master's program. This e-portfolio serves as a comprehensive collection of my academic and professional accomplishments, as well as a demonstration of my skills and knowledge in the field of cyber security.</p>
 							</div>
 						</div>
 					</section>
