--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<header class="major">
 									<h2>About Me</h2>
 								</header>
-								<p>My name is Sherelle Garwood, I am a Computer Science secondary school teacher from London. I will be using this site to document my studies towards a MSc in Cyber Security</p>
+								<p>My name is Sherelle Garwood, and I am excited to share with you my journey and experiences throughout my Master's program. This e-portfolio serves as a comprehensive collection of my academic and professional accomplishments, as well as a demonstration of my skills and knowledge in the field of cyber security.</p>
 								<ul class="actions">
 								<li><a href="About.html" class="button">Learn more</a></li>
 								</ul>
