--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@ A new Landing page has to be created for each option
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><span>Jane Doe</span></a>
+						<a href="index.html" class="logo"><span>Sherelle Garwood</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -53,8 +53,8 @@ A new Landing page has to be created for each option
 								<h1>About Me</h1>
 							</header>
 							<div class="content">
-								<p>About me<br />
-								My name is [Your Name], and I am excited to share with you my journey and experiences throughout my Master's program. This e-portfolio serves as a comprehensive collection of my academic and professional accomplishments, as well as a demonstration of my skills and knowledge in the field of cyber security.</p>
+								<p>
+								My name is Sherelle Garwood, and I am excited to share with you my journey and experiences throughout my Master's program. This e-portfolio serves as a comprehensive collection of my academic and professional accomplishments, as well as a demonstration of my skills and knowledge in the field of cyber security.</p>
 							</div>
 						</div>
 					</section>
