--- a/research.html
+++ b/research.html
@@ -38,6 +38,7 @@ A new Landing page has to be created for each option
 							<li><a href="Module 4.html">Secure Software Development</a></li>
 							<li><a href="Module 5.html">Secure Systems Architecture</a></li>
 							<li><a href="Module 6.html">The Human Factor</a></li>
+							<li><a href="research.html">Research Methods and Professional Practice</a></li>
 							<li><a href="Project.html">Project</a></li>
 						</ul>
 					</nav>
