--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 							<li><a href="Module 4.html">Secure Software Development</a></li>
 							<li><a href="Module 5.html">Secure Systems Architecture</a></li>
 							<li><a href="Module 6.html">The Human Factor</a></li>
+							<li><a href="research.html">Research Methods and Professional Practice</a></li>
 							<li><a href="Project.html">Project</a></li>
 							<ul>
 					</nav>
@@ -123,6 +124,16 @@
 								<header class="major">
 									<h3><a href="Module 6.html" class="link">The Human Factor</a></h3>
 									<p>Methods to meet human factor cyber security challenges</p>
+								</header>
+							</article>
+							
+							<article>
+								<span class="image">
+									<img src="images/pic06.jpg" alt="" />
+								</span>
+								<header class="major">
+									<h3><a href="research.html" class="link">Research Methods and Professional Practice</a></h3>
+									<p>My work on ...... which led to the creation of .....</p>
 								</header>
 							</article>
 							<article>
