--- a/research.html
+++ b/research.html
@@ -51,10 +51,10 @@ A new Landing page has to be created for each option
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Network And Inofrmation Security Management</h1>
+								<h1>Research Methods and Professional Practice</h1>
 							</header>
 							<div class="content">
-								<p>The underpinning concepts of network security</p>
+								<p>Theoretical and practical skills for coducting research</p>
 							</div>
 						</div>
 					</section>
@@ -68,12 +68,12 @@ A new Landing page has to be created for each option
 									<header class="major">
 										<h2>Learning Outcomes</h2>
 									</header>
-									<p>I will learn:</p>
+					
 									<ul>
-										<li>To identify and analyse security risks and vulnerabilities in IT network systems and determine appropriate methodologies, tools and techniques to manage and/or solve them.</li>
-										<li>To design and critically appraise computer programs and systems to produce solutions that help manage and audit risk and security issues.</li>
-										<li>To gather and synthesise information from multiple sources (including internet security alerts & warning sites) to aid in the systematic analysis of security breaches and issues.</li>
-										<li>To articulate the legal, social, ethical and professional issues faced by information security professionals.</li>
+										<li>To attain proficiency in the study and contemplation of fundamental principles and methodologies undergirding scientific inquiry.</li>
+										<li>To attain the ability to examine diverse research tactics and structures pertinent to current projects.</li>
+										<li>To attainthe ability to develop research competencies, to enable a critical design and evaluation of independent research.</li>
+										
 									</ul>
 								</div>
 							</section>
@@ -87,7 +87,7 @@ A new Landing page has to be created for each option
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Unit and Seminar Tasks</h3>
+												<h3>Unit Artefacts</h3>
 											</header>
 											<p>Weekly tasks carried out for each unit</p>
 											<ul class="actions">
@@ -105,25 +105,9 @@ A new Landing page has to be created for each option
 											<header class="major">
 												<h3>Reflections</h3>
 											</header>
-											<p>Unit reflections for internet and information security management</p>
+											<p>Unit reflections for research methods and professional practice</p>
 											<ul class="actions">
 												<li><a href="Reflection.html" class="button">More Information here</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<a href="Reflection.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Meeting Notes</h3>
-											</header>
-											<p>Notes from various meetings, as well as feedback from team members and tutors.</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">For details, see here</a></li>
 											</ul>
 										</div>
 									</div>
