--- a/research.html
+++ b/research.html
@@ -91,7 +91,7 @@ A new Landing page has to be created for each option
 											</header>
 											<p>Weekly tasks carried out for each unit</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="units.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
