--- a/rm_u1.html
+++ b/rm_u1.html
@@ -38,7 +38,7 @@
 							<li><a href="Module 4.html">Secure Software Development</a></li>
 							<li><a href="Module 5.html">Secure Systems Architecture</a></li>
 							<li><a href="Module 6.html">The Human Factor</a></li>
-              <li><a href="research.html">Research Methods and Professional Practice</a></li>
+              						<li><a href="research.html">Research Methods and Professional Practice</a></li>
 							<li><a href="Project.html">Project</a></li>
 						</ul>
 					</nav>
@@ -54,7 +54,7 @@
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									<h3>Unit 1 Overview</h3>
-									<p>Week 1 involved discussing the basics of Information Security Management,the four tenets of security (availability, confidentiality, integrity, non-repudiation) and understand how they underpin the field of Information Security.</p>
+									<p>Research Methods</p>
 									<h3>Collaborative Learning Discussion: Compromising a Medical Mannequin</h3>
 									<p>The ‘Compromising a Medical Mannequin’ research paper by Glisson et al’s (2015), explored the impact of security breaches on medical mannequin’s within training facilities. Medical training devices have become increasingly reliant on technology, leading to a growing need to mitigate against any possible security challenges </p>
 
