--- a/rm_u2.html
+++ b/rm_u2.html
@@ -1,1 +1,127 @@
+<!DOCTYPE HTML>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	This is an example of a sub page for each module.  It has to be replicated in each module, containing the requested contents -  artefacts, notes, reflections etc
+	Ensure you give a different title to each replica and link it to the main module page accordingly.
+-->
+<html>
+	<head>
+		<title>Sherelle Garwood</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="css/main.css" />
+		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<a href="index.html" class="logo"><span>Sherelle Garwood</span></a>
+						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
+					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<ul class="links">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="About.html">About Me</a></li>
+							<li><a href="Launch Module.html">Launching Into Cyber Security</a></li>
+							<li><a href="Module 2.html">Network And Information Security Management</a></li>
+							<li><a href="Module 3.html">Information Risk Management</a></li>
+							<li><a href="Module 4.html">Secure Software Development</a></li>
+							<li><a href="Module 5.html">Secure Systems Architecture</a></li>
+							<li><a href="Module 6.html">The Human Factor</a></li>
+              						<li><a href="research.html">Research Methods and Professional Practice</a></li>
+							<li><a href="Project.html">Project</a></li>
+						</ul>
+					</nav>
+
+				<!-- Main -->
+					<div id="main" class="alt">
+
+						<!-- One -->
+							<section id="one">
+								<div class="inner">
+									<header class="major">
+										<h1>Unit 1</h1>
+									</header>
+									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<h2>Unit 1: Scientific Investigation and Ethics</h2>
+									<h3>Collaborative Learning Discussion: Codes of Ethics and Professional Conduct</h3>
+									<p> The ACM case study described a web hosting service called ‘Rogue services’. The majority of their clients were fraudulent services using Rogue to conduct ransomware attacks, and the dependability of the web hosting service was used by botnets to protect their servers. Despite requests from ISPs, Rogue did not protect against the use of these services, and there was no intervention from the government due to the laws within the host country of the company.
+
+<p>The BCS code of conduct outlines the professional standards that should be adhered to by those within the IT industry. When applying the BCS code of conduct to the case study, it is evident that Rogue violated principle 1a, stating that “you have due regard for public health, privacy, security and wellbeing of others” (BCS, 2022). This is due to the fact that Rogue was aware of the misuse of their services and failed to protect it. Rogue also violated principle 2f, “avoid injuring others, their property, reputation, or employment by false or malicious or negligent action or inaction” (BCS, 2022). Rogue’s inaction led to an increase in spam and botnet traffic. </p>
+
+<p>Rogue was eventually taken offline through the use of a targeted worm, carried out by security vendors. No other ISP’s reported any impact from this. Although, the creation and implementation of malware would violate multiple code of conducts, this was a nuanced situation as the use of the worm was ‘ethically justified’ (ACM, 2018). This is in line with the moral obligation of IT professionals identified in principle 1a.</p>
+
+<p>In this case study, the victims of the companies using Rogue services, had limited legal protection due to the country for which Rogue was hosted. Therefore, security vendors alongside governmental organisations used malware disruption to prevent further harm. </p>
+ 
+
+									<p> References </p>
+
+<p> ACM, . (2018) Case: Malware disruption - ACM ethics, ACM Ethics - The Official Site of the Association for Computing Machinery's Committee on Professional Ethics. Available at: https://ethics.acm.org/code-of-ethics/using-the-code/case-malware-disruption/ (Accessed: January 31, 2023).</p>
+
+<p> BCS, . (2022) Code of conduct - BCS, the Chartered Institute for it | BCS, BCS.org. Available at: https://www.bcs.org/media/2211/bcs-code-of-conduct.pdf (Accessed: January 31, 2023).</p>
+
+<p>Gotterbarn, D. (2018) ACM Code of Ethics and Professional Conduct, Code of Ethics. ACM. Available at: https://www.acm.org/code-of-ethics (Accessed: January 31, 2023). </p>
+
+									<h2> Reflective Activity: Ethics in Computing </h2>
+									<p> In the Stahl et al paper, the authors state that “many of the authors involved in researching the ethics of computing remain wedded to their disciplinary traditions and fail to provide actionable advice to relevant stakeholders” (Stahl, 2016). The aim of the paper was to document all aspects of discourse regarding ethics within Computing, and compile the narrative regarding professional standards. During this review, it is assumed that I am a relevant stakeholder (cyber security professional) within the NHS (National Health Service). Ethical issues pertaining to a Cyber professional will be examined 
+										alongside potential actions that can be taken </p>
+									<p> One of the ethical issues mentioned in the paper was concerns regarding privacy, which “proved to be the dominant ethical concern and concept employed throughout the discourse” (Stahl, 2016). Privacy can often be considered in to forms, data privacy and personal privacy.  As technology has become increasingly integrated into every aspect of our lives, the amount of personal data we generate has increased exponentially. It is generally agreed amongst academics and policy makers that individuals have a right to control their own personal data and that companies should be held accountable for protecting that data. As a cyber professional within the NHS, it is likely that I will have access to private data of employees and service users. 
+										It is essential that in my role, I am aiming to ensure that this data is protected and used responsibly. Failure to do this could result in legal and financial consequences for the NHS, as well as damage to its reputation. To address this issue, there are many actions that I can take as cyber security professional. First and foremost, I can ensure that I am familiar with the NHS policies and procedures regarding the collection, storage, and use of personal data. In the UK, the legal frameworks covering how patient data must be looked after and processed are the Data Protection Act (DPA) 2018, which brought the EU General Data Protection Regulation (GDPR, 2022) into law, and the Common Law Duty of Confidentiality (NHS, 2018). This states that the NHS have a duty to be fair, lawful and transparent basis for collection and processing of data. Secondly, I can ensure that the personal data I have access to is secured appropriately. 
+										This may involve using strong passwords, two-factor authentication or biometrics to prevent unauthorised access to data. This may also include storing data on encrypted devices, and being mindful of the physical security of any documents or devices that contain personal data. Lastly, as a cyber security professional, it is my role to be vigilant for any signs of potential security breaches or data misuse. If I suspect that personal data has been accessed or used inappropriately, I can take steps to report this or isolate areas of the network that may have been breached. I would also be responsible for protecting data with the use of anti-malware, firewalls and other network defences which may prevent data breaches. </p>
+										
+									<p> Another ethical issue mentioned within the research paper was consent of individuals. This would affect my role within the NHS as it collects personal data from individuals or engages in activities that require explicit consent. An issue may arise if personal data is used, or shared without obtaining the necessary consent from the individuals involved. As an employee, I can take several actions to aid with addressing this ethical issue. Firstly, I can ensure that the NHS has a clear policy on obtaining consent from individuals and that this policy is adhered to in all data collection activities. 
+										This could involve obtaining explicit consent from individuals before collecting their personal data, providing clear and concise information about the purposes for which their data will be used, and giving individuals the option to opt-out of data collection activities, if possible. I can also ensure that I am aware of the legal and ethical implications of data collection activities and that I am familiar with the regulations or guidelines that apply (such as GDPR stated above). 
+										This would involve staying up-to-date with relevant laws and regulations, attending training sessions or workshops on data privacy and consent. Finally, I can try to promote a culture of ethical data use within the NHS. This could involve advocating for the protection of individual privacy rights, raising awareness about the importance of obtaining consent, and encouraging colleagues/ employees to adhere to ethical principles in all data collection activities. </p>
+										
+									<p> To conclude, as a cyber security professional within the NHS there are many ethical issues that may impact my role. The ethical issues highlighted within this report were: Privacy and consent. 
+										These were drawn attention to within the Stahl et al literature review. I have a responsibility to ensure that the personal data of customers, clients, and employees is protected and used responsibly. By following company policies and procedures, securing personal data appropriately, and being vigilant for any signs of potential security breaches or data misuse. 
+										Regarding consent, I can take many actions to address this issue, including ensuring that the company has a clear policy on obtaining consent, staying up-to-date with relevant laws and regulations, and promoting a culture of ethical data use within the company. </p>
+									<p> References </p>
+									<p> GDPR (2022) Official Legal Text, General Data Protection Regulation (GDPR). Available at: https://gdpr-info.eu/ (Accessed: February 14, 2023). </p>
+<p>NHS (2018) Data sharing standard 7b – Duty of Confidentiality, NHS choices. NHS. Available at: https://digital.nhs.uk/services/data-access-request-service-dars/dars-guidance/data-sharing-standard-7b---duty-of-confidentiality#:~:text=A%20duty%20of%20confidentiality%20arises,the%20recipient%20of%20the%20information. (Accessed: February 14, 2023). </p>
+<p>Stahl, B., Timmermans, J. & Mittelstadt, B. (2016) The Ethics of Computing. ACM Computing Surveys 48(4):1-38. DOI: 10.1145/2871196 (Accessed: February 14, 2023). </p>
+<p>UK Government (no date) Data protection act 2018, Legislation.gov.uk. Queen's Printer of Acts of Parliament. Available at: https://www.legislation.gov.uk/ukpga/2018/12/contents/enacted (Accessed: February 14, 2023).</p>
+
+		
+
+								</div>
+							</section>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.scrolly.min.js"></script>
+			<script src="js/jquery.scrollex.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
+
+	</body>
+</html>
