--- a/units.html
+++ b/units.html
@@ -56,9 +56,9 @@
 									<h3>Units</h3>
 									
 									<p><a href="rm_u1.html">Unit 1</a></p>
-									<p><a href="nism_u2.html">Unit 2</a></p>
-									<p><a href="nism_u3.html">Unit 3</a></p>
-									<p><a href="nism_u4.html">Unit 4</a></p>
+									<p><a href="rm_u2.html">Unit 2</a></p>
+									<p><a href="rm_u3.html">Unit 3</a></p>
+									<p><a href="rm_u4.html">Unit 4</a></p>
 									<p><a href="nism_u5.html">Unit 5</a></p>
 									<p><a href="nism_u6.html">Unit 6</a></p>
 									<p><a href="nism_u7.html">Unit 7</a></p>
