--- a/rm_u2.html
+++ b/rm_u2.html
@@ -50,12 +50,12 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Unit 1</h1>
+										<h1>Unit 2</h1>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									<h2>Unit 2: Research Questions, the Literature Review and the Research Proposal</h2>
 									<h3>Collaborative Learning Discussion: Codes of Ethics and Professional Conduct (Peer Responses)</h3>
-									<p> Peer Response 1 </p>
+									<h3> Peer Response 1 </h3>
 									<p> Hello Victoria, </p>
 									<p> Thank you for your interesting and thoughtful post. </p>
 									<p> As you previously described, Corazón implemented a basic security mechanism meaning that the implant ‘could only be accessible through short-range wireless connections’ (ACM, 2021). 
@@ -65,7 +65,7 @@
 									<p> References </p>
 									<p> ACM, . (2021) Case: Medical implant risk analysis - ACM ethics, ACM Ethics - The Official Site of the Association for Computing Machinery's Committee on Professional Ethics. Available at: https://ethics.acm.org/code-of-ethics/using-the-code/case-medical-implant-risk-analysis/ (Accessed: February 13, 2023). </p>
 									<p>BCS, . (2022) Code of conduct - BCS, the Chartered Institute for it | BCS, BCS- Code of Conduct. Available at: https://www.bcs.org/media/2211/bcs-code-of-conduct.pdf (Accessed: February 13, 2023). </p>
-									<p> Peer Response 2 </p>
+									<h3> Peer Response 2 </h3>
 									<p> Hello Mohammad, </p>
 									<p> Thank you for your thoughtful and interesting post on the UX design case study. </p>
 									<p> The study detailed a case of dark UX design. Stewart (a UX designer), received a request to redesign a website but soon realised that the changes were confusing and would lead to user’s buying products/additions that they were unaware of.
