--- a/rm_u1.html
+++ b/rm_u1.html
@@ -54,7 +54,7 @@
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									<h2>Unit 1: Scientific Investigation and Ethics</h2>
-									<h3>Collaborative Learning Discussion: Codes of Ethics and Professional Conduct</h3>
+									<h3>Collaborative Learning Discussion: Codes of Ethics and Professional Conduct (Initial Post)</h3>
 									<p> The ACM case study described a web hosting service called ‘Rogue services’. The majority of their clients were fraudulent services using Rogue to conduct ransomware attacks, and the dependability of the web hosting service was used by botnets to protect their servers. Despite requests from ISPs, Rogue did not protect against the use of these services, and there was no intervention from the government due to the laws within the host country of the company.
 
 <p>The BCS code of conduct outlines the professional standards that should be adhered to by those within the IT industry. When applying the BCS code of conduct to the case study, it is evident that Rogue violated principle 1a, stating that “you have due regard for public health, privacy, security and wellbeing of others” (BCS, 2022). This is due to the fact that Rogue was aware of the misuse of their services and failed to protect it. Rogue also violated principle 2f, “avoid injuring others, their property, reputation, or employment by false or malicious or negligent action or inaction” (BCS, 2022). Rogue’s inaction led to an increase in spam and botnet traffic. </p>
