--- a/rm_u4.html
+++ b/rm_u4.html
@@ -65,7 +65,7 @@
                       <li>Introduction to machine learning tools and techniques</li>
                       <li>Brief overview of the use of machine learning in crime prediction</li>
                       <li>Review of literature/studies using machine learning algorithms </li>
-                      <ol>
+                      <ol type="i">
                         <li>Vector machines- Gerber and Johnson </li>
                         <li> Neural networks- Bowers et al. </li>
                         <li> Decision trees- Mohler et al. </li>
