--- a/units.html
+++ b/units.html
@@ -59,14 +59,14 @@
 									<p><a href="rm_u2.html">Unit 2</a></p>
 									<p><a href="rm_u3.html">Unit 3</a></p>
 									<p><a href="rm_u4.html">Unit 4</a></p>
-									<p><a href="nism_u5.html">Unit 5</a></p>
-									<p><a href="nism_u6.html">Unit 6</a></p>
-									<p><a href="nism_u7.html">Unit 7</a></p>
-									<p><a href="nism_u8.html">Unit 8</a></p>
-									<p><a href="nism_u9.html">Unit 9</a></p>
-									<p><a href="nism_u10.html">Unit 10</a></p>
-									<p><a href="nism_u11.html">Unit 11</a></p>
-									<p><a href="nism_u12.html">Unit 12</a></p>
+									<p><a href="rm_u5.html">Unit 5</a></p>
+									<p><a href="rm_u6.html">Unit 6</a></p>
+									<p><a href="rm_u7.html">Unit 7</a></p>
+									<p><a href="rm_u8.html">Unit 8</a></p>
+									<p><a href="rm_u9.html">Unit 9</a></p>
+									<p><a href="rm_u10.html">Unit 10</a></p>
+									<p><a href="rm_u11.html">Unit 11</a></p>
+									<p><a href="rm_u12.html">Unit 12</a></p>
 									<p><a href="nism_matrix.html">Professional Skills Matrix and Action Plan</a></p>
 									
 								</div>
