--- a/rm_u6.html
+++ b/rm_u6.html
@@ -52,7 +52,7 @@
 									<header class="major">
 										<h1>Unit 6</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 									<h2>Unit 6: Questionnaire Design</h2>
 									<h3>Data Collection </h3>
 									<p> There are many data collection tools that can be used to obtain data, such as: surveys, interviews and questionnaires. For my proposed capstone project, I will be using surveys to collect data from my participants. 
