--- a/units.html
+++ b/units.html
@@ -64,9 +64,8 @@
 									<p><a href="rm_u7.html">Unit 7</a></p>
 									<p><a href="rm_u8.html">Unit 8</a></p>
 									<p><a href="rm_u9.html">Unit 9</a></p>
-									<p><a href="rm_u10.html">Unit 10</a></p>
-									<p><a href="rm_u11.html">Unit 11</a></p>
-									<p><a href="rm_u12.html">Unit 12</a></p>
+									<p><a href="sm.html">Summary Measures</a></p>
+									<p><a href="ht.html">Hypothesis Testing</a></p>
 									<p><a href="nism_matrix.html">Professional Skills Matrix and Action Plan</a></p>
 									
 								</div>
