--- a/units.html
+++ b/units.html
@@ -64,8 +64,9 @@
 									<p><a href="rm_u7.html">Unit 7</a></p>
 									<p><a href="rm_u8.html">Unit 8</a></p>
 									<p><a href="rm_u9.html">Unit 9</a></p>
-									<p><a href="sm.html">Summary Measures</a></p>
-									<p><a href="ht.html">Hypothesis Testing</a></p>
+									<p><a href="sm.html">Summary Measures Worksheet</a></p>
+									<p><a href="ht.html">Hypothesis Testing Worksheet</a></p>
+									<p><a href="charts.html">Charts Worksheet</a></p>
 									<p><a href="nism_matrix.html">Professional Skills Matrix and Action Plan</a></p>
 									
 								</div>
