--- a/research.html
+++ b/research.html
@@ -107,7 +107,7 @@ A new Landing page has to be created for each option
 											</header>
 											<p>Unit reflections for research methods and professional practice</p>
 											<ul class="actions">
-												<li><a href="Reflection.html" class="button">More Information here</a></li>
+												<li><a href="rm_reflection.html" class="button">More Information here</a></li>
 											</ul>
 										</div>
 									</div>
