--- a/research.html
+++ b/research.html
@@ -122,7 +122,7 @@ A new Landing page has to be created for each option
 									</header>
 									<p>Skills have I gained or enhaced as a result of this module</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button next">Learn More</a></li>
+										<li><a href="matrix.html" class="button next">Learn More</a></li>
 									</ul>
 								</div>
 							</section>
