--- a/rm_u1.html
+++ b/rm_u1.html
@@ -57,7 +57,7 @@
 									<header class="major">
 										<h1>Unit 1</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<!--<span class="image main"><img src="images/pic11.jpg" alt="" /></span>-->
 									<h2>Unit 1: Scientific Investigation and Ethics</h2>
 									<h3>Collaborative Learning Discussion: Codes of Ethics and Professional Conduct (Initial Post)</h3>
 									<p> The ACM case study described a web hosting service called ‘Rogue services’. The majority of their clients were fraudulent services using Rogue to conduct ransomware attacks, and the dependability of the web hosting service was used by botnets to protect their servers. Despite requests from ISPs, Rogue did not protect against the use of these services, and there was no intervention from the government due to the laws within the host country of the company.
