--- a/rm_u2.html
+++ b/rm_u2.html
@@ -52,7 +52,8 @@
 									<header class="major">
 										<h1>Unit 2</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
+									
 									<h2>Unit 2: Research Questions, the Literature Review and the Research Proposal</h2>
 									<h3>Collaborative Learning Discussion: Codes of Ethics and Professional Conduct (Peer Responses)</h3>
 									<h3> Peer Response 1 </h3>
