--- a/rm_u3.html
+++ b/rm_u3.html
@@ -52,7 +52,7 @@
 									<header class="major">
 										<h1>Unit 3</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 									<h2>Unit 3: Research Methods</h2>
 									<h3>Collaborative Learning Discussion: Codes of Ethics and Professional Conduct (Summary Post)</h3>
 									<p> Thank you to those who thoughtfully responded to my initial post regarding the ACM case study based on a web hosting service called ‘Rogue services’. As Zihaad stated, the case raises important ethical questions about the use of malware as a means of disruption. Malware may sometimes be used for investigative purposes by law enforcement or other government agencies. 
