--- a/rm_u4.html
+++ b/rm_u4.html
@@ -52,7 +52,7 @@
 									<header class="major">
 										<h1>Unit 4</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 									<h2>Unit 4: Case Studies, Focus Groups and Observations</h2>
 									<h3>Literature Review Outline</h3>
 									<p> Literature review outline: Implementing Machine Learning tools and techniques in crime prediction. </p>
