--- a/nism_u5.html
+++ b/nism_u5.html
@@ -51,7 +51,7 @@
 									<header class="major">
 										<h1>Unit 5</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 									<h3>Unit 5 Overview</h3>
 									<p>During unit 5, we reviewed the functions of the wide variety of network components such as switches, routers, firewalls and gateways.</p>
 									<h3>Peer Response: Team scanning exercise</h3>
