--- a/rm_u5.html
+++ b/rm_u5.html
@@ -52,8 +52,8 @@
 									<header class="major">
 										<h1>Unit 5</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<h2>Unit 4: Interviews and Survey Methods</h2>
+									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
+									<h2>Unit 5: Interviews and Survey Methods</h2>
 									<h3>Reflective Activity</h3>
 									<p> Cambridge Analytica was a political consulting firm that was in the news for obtaining and sharing data obtained from millions of Facebook users, during the 2016 United States presidential election (Cadwalladr, 2018). </p>
                   <p> Cambridge Analytica collected data was through a quizzes and surveys, one of which was an app called "thisisyourdigitallife" (Wagner, 2018). The app was designed by Aleksandr Kogan, a psychology professor at the University of Cambridge, and it collected not only the data of the people who used it but also the data of their friends. 
