--- a/sm.html
+++ b/sm.html
@@ -49,6 +49,9 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
+									<ul class="actions">
+												<li><a href="research.html" class="button">Research methods and professional skills</a></li>
+											</ul>
 									<header class="major">
 										<h1>Unit 9</h1>
 									</header>
