--- a/units.html
+++ b/units.html
@@ -77,6 +77,9 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+							<ul class="actions">
+												<li><a href="research.html" class="button">Research methods and professional skills</a></li>
+											</ul>
 							<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
