--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 								</span>
 								<header class="major">
 									<h3><a href="research.html" class="link">Research Methods and Professional Practice</a></h3>
-									<p>My work on ...... which led to the creation of .....</p>
+									<p>Research methods and statistical analysis</p>
 								</header>
 							</article>
 							<article>
